<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/picture"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/onBoardInitMe"
        android:layout_marginBottom="-230dp"
        />

    <ImageView
        android:id="@+id/onBoardInitMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/onboard_me"

        />

    <ImageView
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/clock"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/onBoardInitMe"
        android:layout_marginBottom="-170dp"
        />

    <ImageView
        android:id="@+id/another_wall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/another_wall"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/onBoardInitMe"
        android:layout_marginTop="-70dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/onBoardInitMe"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/with"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/oauth_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oauth"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="3dp"
                />

            <TextView
                android:id="@+id/regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regis"
                android:textColor="@color/black"
                android:layout_marginStart="3dp"
                />

        </LinearLayout>

            <TextView
                android:id="@+id/hassle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hassle"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                />

    </LinearLayout>

</RelativeLayout>